spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-client-discovery-it/src/test/resources/kubernetes-discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-client-discovery-deployment-it
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-client-discovery-it
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-client-discovery-it
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: spring-cloud-kubernetes-client-discovery
          image: docker.io/springcloud/spring-cloud-kubernetes-client-discovery-it
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            initialDelaySeconds: 5
            periodSeconds: 1
            failureThreshold: 1
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 5
            periodSeconds: 1
            failureThreshold: 1
          ports:
            - containerPort: 8080
